--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -80,7 +80,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/btn"
             android:elevation="5dp"
-            android:text="Inhold"
+            android:text="inhold"
             android:visibility = "gone"
             android:inputType="text"
             android:paddingLeft="15dp"
