--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -173,11 +173,13 @@
                 android:id="@+id/btnedit"
                 android:layout_width="120dp"
                 android:layout_height="40dp"
+                android:onClick="patientedit"
                 android:background="@drawable/btncolor1"
                 android:elevation="5dp"
                 android:text="Edit"
                 android:textAllCaps="false"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                tools:ignore="OnClick" />
 
             <Button
                 android:id="@+id/btnback"
