--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,20 +20,20 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="94dp"
-        android:layout_marginLeft="94dp"
-        android:layout_marginTop="102dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginRight="95dp"
-        android:layout_marginBottom="393dp"
+        android:layout_marginStart="87dp"
+        android:layout_marginLeft="87dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="102dp"
+        android:layout_marginRight="102dp"
+        android:layout_marginBottom="397dp"
         android:src="@drawable/docreg" />
 
     <TextView
-        android:textColor="#ffff"
         android:layout_width="217dp"
         android:layout_height="44dp"
         android:layout_centerInParent="true"
         android:text="Doctor Registration"
+        android:textColor="#ffff"
         android:textSize="24dp" />
 
     <ImageView
@@ -48,24 +48,28 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="442dp"
+        android:layout_marginTop="389dp"
         android:layout_marginEnd="89dp"
         android:layout_marginRight="89dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="113dp"
         android:src="@drawable/pg" />
 
     <TextView
-        android:textColor="#ffff"
         android:layout_width="217dp"
         android:layout_height="44dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="98dp"
-        android:layout_marginTop="672dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="98dp"
+        android:layout_marginTop="621dp"
         android:layout_marginEnd="94dp"
+        android:layout_marginRight="94dp"
         android:layout_marginBottom="60dp"
         android:text="Patient Registration"
+        android:textColor="#ffff"
         android:textSize="24dp" />
 
 </RelativeLayout>
