--- a/app/src/main/res/layout/activity_update_patient.xml
+++ b/app/src/main/res/layout/activity_update_patient.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/electricblue"
-    tools:context=".DoctorProfile"
     android:fillViewport="true"
-    android:scrollbars="none">
+    android:background="@color/electricblue"
+    android:scrollbars="none"
+    tools:context=".update_patient">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+
         android:gravity="center"
         tools:context=".MainActivity">
 
@@ -25,24 +26,32 @@
             android:padding="10dp">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:text="Patient's Profile Update"
+                android:textColor="#000000"
+                android:textSize="17dp" />
+            <TextView
                 android:id="@+id/emailIdHide"
                 android:layout_width="250dp"
                 android:layout_height="44dp"
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
+                android:visibility = "gone"
+                android:paddingLeft="15dp"
+                android:textColorHint="#000000" />
+            <TextView
+                android:id="@+id/patient_id"
+                android:layout_width="250dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="20dp"
+                android:elevation="5dp"
+                android:inputType="number"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000"
                 android:visibility="gone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle"
-                android:gravity="center"
-                android:text="Doctor's Profile"
-                android:textColor="#000000"
-                android:textSize="17dp" />
-
             <TextView
                 android:id="@+id/namedefault"
                 android:layout_width="250dp"
@@ -50,10 +59,9 @@
                 android:layout_marginTop="20dp"
                 android:elevation="5dp"
                 android:hint="Name"
-                android:inputType="textPersonName"
+                android:textSize="21dp"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/name"
@@ -62,10 +70,10 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="textPersonName"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/agedefault"
@@ -74,10 +82,10 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Age"
+                android:textSize="21dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/age"
@@ -86,34 +94,34 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
+                android:textColorHint="#000000" />
 
             <TextView
-                android:id="@+id/phonenodefault"
+                android:id="@+id/phonedefault"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Phone-No"
+                android:textSize="21dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
+                android:textColorHint="#000000" />
 
-            <TextView
-                android:id="@+id/phoneno"
+            <EditText
+                android:id="@+id/phone"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="number"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/emaildefault"
@@ -122,10 +130,10 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Email-Id"
+                android:textSize="21dp"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/email"
@@ -134,106 +142,10 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/departmentdefault"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:elevation="5dp"
-                android:hint="Department"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
-
-            <TextView
-                android:id="@+id/department"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/btn1"
-                android:elevation="5dp"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/experiencedefault"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:elevation="5dp"
-                android:hint="Experience"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
-
-            <TextView
-                android:id="@+id/experience"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/btn1"
-                android:elevation="5dp"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/addressdefault"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:elevation="5dp"
-                android:hint="Address"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
-
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/btn1"
-                android:elevation="5dp"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/qualificationdefault"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:elevation="5dp"
-                android:hint="Qualification"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
-
-            <TextView
-                android:id="@+id/qualification"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/btn1"
-                android:elevation="5dp"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="19dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/genderdefault"
@@ -242,10 +154,10 @@
                 android:layout_marginTop="15dp"
                 android:elevation="5dp"
                 android:hint="Gender"
+                android:textSize="21dp"
                 android:inputType="text"
                 android:paddingLeft="15dp"
-                android:textColorHint="#000000"
-                android:textSize="21dp" />
+                android:textColorHint="#000000" />
 
             <TextView
                 android:id="@+id/gender"
@@ -254,47 +166,55 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn1"
                 android:elevation="5dp"
+                android:textSize="19dp"
+                android:inputType="text"
+                android:paddingLeft="15dp"
+                android:textColorHint="#000000" />
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="15dp"
+                android:elevation="5dp"
+                android:visibility="gone"
                 android:inputType="text"
                 android:paddingLeft="15dp"
                 android:textColorHint="#000000"
-                android:textSize="19dp" />
-
+                android:textSize="21dp" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/gender"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:showDividers="middle|end">
-
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:showDividers="middle|end"
+                >
                 <Button
-                    android:id="@+id/btnedit"
+                    android:id="@+id/btnhome"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:background="@drawable/btncolor1"
                     android:elevation="5dp"
-                    android:text="Edit"
-                    android:onClick="Doctoredit"
+                    android:text="Home"
                     android:textAllCaps="false"
                     android:textColor="#000000" />
 
                 <Button
-                    android:id="@+id/btnback"
+                    android:id="@+id/btnsubmit"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="80dp"
                     android:background="@drawable/btncolor1"
                     android:elevation="5dp"
-                    android:text="Back"
+                    android:text="Submit"
                     android:textAllCaps="false"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:layout_marginLeft="80dp" />
             </LinearLayout>
-
 
         </LinearLayout>
 
-    </RelativeLayout>
 
+    </RelativeLayout>
 
 </ScrollView>
